--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leader Board</title>
-    <!-- CSS Stylesheet Link -->
-    <link rel="stylesheet" href="styles/style.css">
     <!-- Fontawesome Link -->
     <script src="https://kit.fontawesome.com/856b5bd403.js" crossorigin="anonymous"></script>
+    <!-- CSS Stylesheet Link -->
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
@@ -109,6 +109,81 @@
          ---------------------------------->
         <section class="container">
             <h2 class="section-title">Latest Course</h2>
+            <div class="courses">
+                <div class="course">
+                    <div class="course-banner">
+                        <img src="images/courses/course-1.png" alt="">
+                    </div>
+                    <div class="course-details">
+                        <h3 class="course-title">React - The Complete <br> Guide 2020</h3>
+
+                        <p class="course-author">Reed Krakoff.</p>
+                    </div>
+                    <div class="course-info">
+                        <div>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star empty"></i>
+                        </div>
+                        <p>4.5</p>
+                        <div class="course-duration">
+                            <i class="fa-regular fa-clock"></i>
+                            01.30hr
+                        </div>
+                    </div>
+
+                </div>
+                <div class="course">
+                    <div class="course-banner">
+                        <img src="images/courses/course-2.png" alt="">
+                    </div>
+                    <div class="course-details">
+                        <h3 class="course-title">Powerpoint 2020 Master Powerpoint Cour</h3>
+                        <p class="course-author">Walter Scott</p>
+                    </div>
+                    <div class="course-info">
+                        <div>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star empty"></i>
+                        </div>
+                        <p>4.5</p>
+                        <div class="course-duration">
+                            <i class="fa-regular fa-clock"></i>
+                            01.30hr
+                        </div>
+                    </div>
+
+                </div>
+                <div class="course">
+                    <div class="course-banner">
+                        <img src="images/courses/course-3.png" alt="">
+                    </div>
+                    <div class="course-details">
+                        <h3 class="course-title">The Complete JavaScript Courses 2020</h3>
+                        <p class="course-author">Reed Krakoff.</p>
+                    </div>
+                    <div class="course-info">
+                        <div>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star empty"></i>
+                        </div>
+                        <p>4.5</p>
+                        <div class="course-duration">
+                            <i class="fa-regular fa-clock"></i>
+                            01.30hr
+                        </div>
+                    </div>
+
+                </div>
+            </div>
         </section>
 
     </main>
