--- a/index.html
+++ b/index.html
@@ -26,27 +26,27 @@
                 <div class="players">
                     <div class="player">
                         <img src="images/players/player-1.png" alt="">
-                        <h3 class="player-name">Top Player-1</h3>
+                        <h3 class="player-name">Hilarion</h3>
                     </div>
                     <div class="player">
                         <img src="images/players/player-2.png" alt="">
-                        <h3 class="player-name">Top Player-2</h3>
+                        <h3 class="player-name">Naheer</h3>
                     </div>
                     <div class="player">
                         <img src="images/players/player-3.png" alt="">
-                        <h3 class="player-name">Top Player-3</h3>
+                        <h3 class="player-name">Petronax</h3>
                     </div>
                     <div class="player">
                         <img src="images/players/player-4.png" alt="">
-                        <h3 class="player-name">Top Player-4</h3>
+                        <h3 class="player-name">Avaitrix</h3>
                     </div>
                     <div class="player">
                         <img src="images/players/player-5.png" alt="">
-                        <h3 class="player-name">Top Player-5</h3>
+                        <h3 class="player-name">Helowzen</h3>
                     </div>
                     <div class="player">
                         <img src="images/players/player-6.png" alt="">
-                        <h3 class="player-name">Top Player-6</h3>
+                        <h3 class="player-name">Zombee</h3>
                     </div>
                 </div>
             </div>
@@ -81,7 +81,7 @@
                             <img src="images/blogs/blog-3.png" alt="">
                         </div>
                         <div class="blog-info">
-                            <h3 class="blog-title">7 typography tips for interface design
+                            <h3 class="blog-title">7 typography tips <br> for interface design
                             </h3>
                             <p class="blog-author">By <a href="">Jeremiah Lam</a></p>
 
@@ -140,7 +140,8 @@
                         <img src="images/courses/course-2.png" alt="">
                     </div>
                     <div class="course-details">
-                        <h3 class="course-title">Powerpoint 2020 Master Powerpoint Cour</h3>
+                        <h3 class="course-title">Powerpoint 2020 <br>
+                            Master Powerpoint Cour</h3>
                         <p class="course-author">Walter Scott</p>
                     </div>
                     <div class="course-info">
@@ -164,7 +165,7 @@
                         <img src="images/courses/course-3.png" alt="">
                     </div>
                     <div class="course-details">
-                        <h3 class="course-title">The Complete JavaScript Courses 2020</h3>
+                        <h3 class="course-title">The Complete JavaScript <br> Courses 2020</h3>
                         <p class="course-author">Reed Krakoff.</p>
                     </div>
                     <div class="course-info">
